[package]
name = "rust-dwcpn"
version = "0.1.0"
authors = ["James Dingle <jad@pml.ac.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
netcdf = "0.5.2"
#pbr = "1.0.3"
ndarray = "0.14.0"
indicatif = "0.15.0"

[profile.release]
lto = "fat"
codegen-units = 1